--- a/frontend/src/app/global.css
+++ b/frontend/src/app/global.css
@@ -11,6 +11,10 @@ body {
   background-color: lightcoral;
 }
 
+input:placeholder {
+  color: black;
+}
+
 .container {
   width: 60%;
   margin: 0 auto;
