--- a/frontend/src/components/todoInput.module.css
+++ b/frontend/src/components/todoInput.module.css
@@ -11,11 +11,11 @@
 }
 
 .formField {
-  width: 80%;
+  width: 75%;
   border: none;
   border-radius: 8px 0px 0px 8px;
   padding: 15px;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgb(255, 255, 255);
 }
 
 .formField::placeholder {
